@@ -5,6 +5,7 @@ Akeeba Panopticon 1.3.1
 ~ Make accurate PHP CLI path detection optional
 # [MEDIUM] PHP error trying to log in with a username that doesn't exist
 # [LOW] Logs and Tasks views: warning if there's a log/task belonging to a deleted site
+# [LOW] If an extension's short name starts with the character `a`, that letter is cut off
 
 Akeeba Panopticon 1.3.0
 ================================================================================
